--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.4",
     "react": "^18.2.0",
+    "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.6",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
